login page update

--- a/tutorial.html
+++ b/tutorial.html
@@ -29,7 +29,7 @@
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="fa fa-bars color-white"></span>
           </button>
-          <h1><a class="navbar-brand" href="index.html" data-0="line-height:90px;" data-300="line-height:50px;"><a href="http://snap.berkeley.edu"><img src="img/logo.png" width="140px"/></a>
+          <h1><a class="navbar-brand" href="index.html" data-0="line-height:90px;" data-300="line-height:50px;"> SNAP
           </a></h1>
         </div>
         <div class="navbar-collapse collapse">
@@ -44,36 +44,25 @@
         </div><!--/.navbar-collapse -->
       </div>
     </div>
+
+    <section id="introduction">
+      <div class="container">
+      <h2> SNAP TUTORIALS</h2>
+      </div>
+      </section>
     <section id="grid">
-    <div class="sideimg">
-        <img src="img/talking.gif" width="140px"/>
+    <div class="container group">
+      <div class="box one">Column left</div>
+      <div class="box two">Column center</div>
+      <div class="box three">Column right</div>
     </div>
-      <div class="loginform">  
-      <form name="login" action="index_submit" method="get" accept-charset="utf-8">  
-      <ul class="loginlst">  
-          <li><label for="usermail">Email</label>  
-          <input type="email" id="user" placeholder="enter your email" required></li>  
-          <li><label for="password">Password</label>  
-          <input type="password" id="pw" placeholder="password" required></li>  
-          <li>  
-           <button type="submit" class="btn btn-info">Submit</button>
-          </li>  
-        </ul>  
-      </form> 
-      </div> 
-      <div class="join">
-      <ul class="joinlst">
-      <li> Make account with us today. <br>Join SNAP and create your own project:) </li>
-      <li> 
-        <button type="button" class="btn btn-warning">Join</button>
-      </li>
-      </ul>
+    <div class="container group">
+      <div class="box one">Column left</div>
+      <div class="box two">Column center</div>
+      <div class="box three">Column right</div>
     </div>
-    <div class="imgtwo">
-      <img src="img/forloop.png" width="300px"/>
-    </div>
-  </section>
-  <div id="footer">
+    </section>
+    <div id="footer">
       <ul class="nav navbar-nav navbar-center">
             <li><a href="#section-about" class="about"><span>About</span></a></li>
             <li><a href="#section-teachers"><span>Teachers</span></a></li>
@@ -82,5 +71,10 @@
             <li><a href="#section-help"><span>Help</span></a></li>
           </ul>
     </div>
+    </div>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
